syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/credspb";
option java_multiple_files = true;
option java_package = "dev.multy.api.creds";
option java_outer_classname = "MultyProto";

package dev.multy.creds;

message CloudCredentials {
  AwsCredentials aws_creds = 1;
  AzureCredentials azure_creds = 2;
}

message AwsCredentials {
  string access_key = 1;
  string secret_key = 2;

  string session_token = 3;
}

message AzureCredentials {
  string subscription_id = 1;
  string tenant_id = 2;
  string client_id = 3;
  string client_secret = 4;
}